--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
     </dependencies>
 
     <modules>
-        <module>commons</module>
         <module>bff</module>
         <module>domain-base</module>
+        <module>common</module>
     </modules>
 </project>
