--- a/base/pom.xml
+++ b/base/pom.xml
@@ -29,12 +29,19 @@
             <optional>true</optional>
         </dependency>
 
+<!--        database-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
+        </dependency>
         <dependency>
             <groupId>microservices</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
         <!--Test related-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
