feat: calculation demo and test

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -7,27 +7,29 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>microservices</groupId>
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>calculation</artifactId>
+    <groupId>com.example</groupId>
+    <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <description>calculation</description>
+    <name>demo</name>
+    <modelVersion>4.0.0</modelVersion>
+    <description>demo</description>
     <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
         <microservices.version>0.0.1-SNAPSHOT</microservices.version>
-        <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
-        <org.mapstruct.processor.version>1.4.2.Final</org.mapstruct.processor.version>
-        <qlexpress.version>3.3.0</qlexpress.version>
         <liteflow.version>2.10.6</liteflow.version>
         <mysql.version>8.0.29</mysql.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>microservices</groupId>
             <artifactId>common</artifactId>
+            <version>${microservices.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>microservices</groupId>
+            <artifactId>calculation</artifactId>
             <version>${microservices.version}</version>
         </dependency>
 
@@ -41,38 +43,29 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>QLExpress</artifactId>
-            <version>${qlexpress.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.yomahub</groupId>
             <artifactId>liteflow-spring-boot-starter</artifactId>
             <version>${liteflow.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>${org.mapstruct.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-processor</artifactId>
-            <version>${org.mapstruct.version}</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
