--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -7,13 +7,12 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.example</groupId>
+    <groupId>microservices</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
     <modelVersion>4.0.0</modelVersion>
     <description>demo</description>
-    <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
@@ -21,6 +20,7 @@
         <liteflow.version>2.10.6</liteflow.version>
         <mysql.version>8.0.29</mysql.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>microservices</groupId>
