--- a/demo/src/main/resources/business-rules/deposit_calculation_rule.yml
+++ b/demo/src/main/resources/business-rules/deposit_calculation_rule.yml
@@ -4,7 +4,7 @@ rmbAmount:
 
 upperLimitInterestRate:
   componentName: upperLimitInterestRate
-  expression: "benchmarkInterestRate*rmbAmount/12"
+  expression: "benchmarkInterestRate*rmbAmount"
   variables:
     - benchmarkInterestRate
     - rmbAmount
