feat: create flow xml

--- a/demo/src/main/resources/business-rules/deposit_calculation_rule.yml
+++ b/demo/src/main/resources/business-rules/deposit_calculation_rule.yml
@@ -25,6 +25,12 @@ originalAllScenesEva:
     - groupSceneEva
     - listingPrice
 
+innerSceneEva:
+  componentName: customerContribution
+groupSceneEva:
+  componentName: customerContribution
+customerSceneEva:
+  componentName: customerContribution
 customerContribution:
   componentName: customerContribution
 
