feature: add test base

--- a/bff/src/main/resources/application.yml
+++ b/bff/src/main/resources/application.yml
@@ -17,3 +17,11 @@ spring:
             - Path=/api/demo/**
           filters:
             - RewritePath=/api/demo/(?<segment>.*), /$\{segment}
+
+feign:
+  client:
+    config:
+      callbackApiClient:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: basic
