--- a/base/pom.xml
+++ b/base/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>mapstruct</artifactId>
             <version>1.5.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
 
         <!--     database-->
         <dependency>
