--- a/base/src/test/resources/application.yml
+++ b/base/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    jdbc-url: jdbc:mysql://localhost:3308/demo
+    jdbc-url: jdbc:mysql://localhost:3308/ddd-microservice-base
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
