--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -19,6 +19,7 @@
         <microservices.version>0.0.1-SNAPSHOT</microservices.version>
         <liteflow.version>2.10.6</liteflow.version>
         <mysql.version>8.0.29</mysql.version>
+        <redisson.version>3.27.1</redisson.version>
     </properties>
 
     <dependencies>
@@ -46,6 +47,15 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <groupId>org.springframework.boot</groupId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>${redisson.version}</version>
         </dependency>
 
         <dependency>
