--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
   redis:
     host: localhost
     port: 6379
+    redisson:
+      file: classpath:redission.yml
+
   jpa:
     properties:
       hibernate:
