--- a/demo/src/test/resources/application.yml
+++ b/demo/src/test/resources/application.yml
@@ -1,13 +1,10 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: password
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    url: jdbc:mysql://localhost:3308/ddd-microservice-demo?useSSL=false&serverTimezone=UTC
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 liteflow:
   enable: true
   rule-source: config/flow.xml
-
