--- a/base/pom.xml
+++ b/base/pom.xml
@@ -75,14 +75,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy</artifactId>
-            <version>3.0.7</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>io.rest-assured</groupId>
-            <artifactId>xml-path</artifactId>
+            <artifactId>json-path</artifactId>
             <version>4.3.3</version>
             <scope>test</scope>
         </dependency>
