--- a/common/pom.xml
+++ b/common/pom.xml
@@ -23,6 +23,7 @@
         <springfox.version>3.0.0</springfox.version>
         <openhtml.version>1.0.10</openhtml.version>
         <redisson.version>3.27.1</redisson.version>
+        <freemarker.version>2.3.31</freemarker.version>
     </properties>
 
     <dependencies>
@@ -117,6 +118,12 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>${redisson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
         </dependency>
 
         <!--    测试    -->
