--- a/demo/src/test/resources/application.yml
+++ b/demo/src/test/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
+  flyway:
+    baseline-on-migrate: true
 
 liteflow:
   enable: true
